nlopt/nlopt_wrapper.nim


proc nlopt_set_stopval*(opt: nlopt_opt; stopval: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_stopval", dynlib: libname.}
proc nlopt_get_stopval*(opt: nlopt_opt): cdouble {.cdecl,
    importc: "nlopt_get_stopval", dynlib: libname.}
proc nlopt_set_ftol_rel*(opt: nlopt_opt; tol: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_ftol_rel", dynlib: libname.}
proc nlopt_get_ftol_rel*(opt: nlopt_opt): cdouble {.cdecl,
    importc: "nlopt_get_ftol_rel", dynlib: libname.}
proc nlopt_set_ftol_abs*(opt: nlopt_opt; tol: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_ftol_abs", dynlib: libname.}
proc nlopt_get_ftol_abs*(opt: nlopt_opt): cdouble {.cdecl,
    importc: "nlopt_get_ftol_abs", dynlib: libname.}
proc nlopt_set_xtol_rel*(opt: nlopt_opt; tol: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_xtol_rel", dynlib: libname.}
proc nlopt_get_xtol_rel*(opt: nlopt_opt): cdouble {.cdecl,
    importc: "nlopt_get_xtol_rel", dynlib: libname.}
proc nlopt_set_xtol_abs1*(opt: nlopt_opt; tol: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_xtol_abs1", dynlib: libname.}
proc nlopt_set_xtol_abs*(opt: nlopt_opt; tol: ptr cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_xtol_abs", dynlib: libname.}
proc nlopt_get_xtol_abs*(opt: nlopt_opt; tol: ptr cdouble): nlopt_result {.cdecl,
    importc: "nlopt_get_xtol_abs", dynlib: libname.}
proc nlopt_set_maxeval*(opt: nlopt_opt; maxeval: cint): nlopt_result {.cdecl,
    importc: "nlopt_set_maxeval", dynlib: libname.}
proc nlopt_get_maxeval*(opt: nlopt_opt): cint {.cdecl, importc: "nlopt_get_maxeval",
    dynlib: libname.}
proc nlopt_get_numevals*(opt: nlopt_opt): cint {.cdecl,
    importc: "nlopt_get_numevals", dynlib: libname.}
proc nlopt_set_maxtime*(opt: nlopt_opt; maxtime: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_maxtime", dynlib: libname.}
proc nlopt_get_maxtime*(opt: nlopt_opt): cdouble {.cdecl,
    importc: "nlopt_get_maxtime", dynlib: libname.}
proc nlopt_force_stop*(opt: nlopt_opt): nlopt_result {.cdecl,
    importc: "nlopt_force_stop", dynlib: libname.}
proc nlopt_set_force_stop*(opt: nlopt_opt; val: cint): nlopt_result {.cdecl,
    importc: "nlopt_set_force_stop", dynlib: libname.}
proc nlopt_get_force_stop*(opt: nlopt_opt): cint {.cdecl,
    importc: "nlopt_get_force_stop", dynlib: libname.}
##  more algorithm-specific parameters

proc nlopt_set_local_optimizer*(opt: nlopt_opt; local_opt: nlopt_opt): nlopt_result {.
    cdecl, importc: "nlopt_set_local_optimizer", dynlib: libname.}
proc nlopt_set_population*(opt: nlopt_opt; pop: cuint): nlopt_result {.cdecl,
    importc: "nlopt_set_population", dynlib: libname.}
proc nlopt_get_population*(opt: nlopt_opt): cuint {.cdecl,
    importc: "nlopt_get_population", dynlib: libname.}
proc nlopt_set_vector_storage*(opt: nlopt_opt; dim: cuint): nlopt_result {.cdecl,
    importc: "nlopt_set_vector_storage", dynlib: libname.}
proc nlopt_get_vector_storage*(opt: nlopt_opt): cuint {.cdecl,
    importc: "nlopt_get_vector_storage", dynlib: libname.}
proc nlopt_set_default_initial_step*(opt: nlopt_opt; x: ptr cdouble): nlopt_result {.
    cdecl, importc: "nlopt_set_default_initial_step", dynlib: libname.}
proc nlopt_set_initial_step*(opt: nlopt_opt; dx: ptr cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_initial_step", dynlib: libname.}
proc nlopt_set_initial_step1*(opt: nlopt_opt; dx: cdouble): nlopt_result {.cdecl,
    importc: "nlopt_set_initial_step1", dynlib: libname.}
proc nlopt_get_initial_step*(opt: nlopt_opt; x: ptr cdouble; dx: ptr cdouble): nlopt_result {.
    cdecl, importc: "nlopt_get_initial_step", dynlib: libname.}
##  the following are functions mainly designed to be used internally
##    by the Fortran and SWIG wrappers, allow us to tel nlopt_destroy and
##    nlopt_copy to do something to the f_data pointers (e.g. free or
##    duplicate them, respectively)

type
  nlopt_munge* = proc (p: pointer): pointer {.cdecl.}

proc nlopt_set_munge*(opt: nlopt_opt; munge_on_destroy: nlopt_munge;
                     munge_on_copy: nlopt_munge) {.cdecl,
    importc: "nlopt_set_munge", dynlib: libname.}
type
  nlopt_munge2* = proc (p: pointer; data: pointer): pointer {.cdecl.}

proc nlopt_munge_data*(opt: nlopt_opt; munge: nlopt_munge2; data: pointer) {.cdecl,
    importc: "nlopt_munge_data", dynlib: libname.}
##  The deprecated API is not supported. No need for it.
## ************************** DEPRECATED API *************************
##  The new "object-oriented" API is preferred, since it allows us to
##    gracefully add new features and algorithm-specific options in a
##    re-entrant way, and we can automatically assume reasonable defaults
##    for unspecified parameters.
##  Where possible (e.g. for gcc >= 3.1), enable a compiler warning
##    for code that uses a deprecated function
##  #if defined(__GNUC__) && (__GNUC__ > 3 || (__GNUC__==3 && __GNUC_MINOR__ > 0))
##  #  define NLOPT_DEPRECATED __attribute__((deprecated))
##  #else
##  #  define NLOPT_DEPRECATED
##  #endif
##  typedef double (*nlopt_func_old)(int n, const double *x,
##  				 double *gradient, /\* NULL if not needed *\/
##  				 void *func_data);
##  nlopt_result nlopt_minimize(
##       nlopt_algorithm algorithm,
##       int n, nlopt_func_old f, void *f_data,
##       const double *lb, const double *ub, /\* bounds *\/
##       double *x, /\* in: initial guess, out: minimizer *\/
##       double *minf, /\* out: minimum *\/
##       double minf_max, double ftol_rel, double ftol_abs,
##       double xtol_rel, const double *xtol_abs,
##       int maxeval, double maxtime) NLOPT_DEPRECATED;
##  nlopt_result nlopt_minimize_constrained(
##       nlopt_algorithm algorithm,
##       int n, nlopt_func_old f, void *f_data,
##       int m, nlopt_func_old fc, void *fc_data, ptrdiff_t fc_datum_size,
##       const double *lb, const double *ub, /\* bounds *\/
##       double *x, /\* in: initial guess, out: minimizer *\/
##       double *minf, /\* out: minimum *\/
##       double minf_max, double ftol_rel, double ftol_abs,
##       double xtol_rel, const double *xtol_abs,
##       int maxeval, double maxtime) NLOPT_DEPRECATED;
##  nlopt_result nlopt_minimize_econstrained(
##       nlopt_algorithm algorithm,
##       int n, nlopt_func_old f, void *f_data,
##       int m, nlopt_func_old fc, void *fc_data, ptrdiff_t fc_datum_size,
##       int p, nlopt_func_old h, void *h_data, ptrdiff_t h_datum_size,
##       const double *lb, const double *ub, /\* bounds *\/
##       double *x, /\* in: initial guess, out: minimizer *\/
##       double *minf, /\* out: minimum *\/
##       double minf_max, double ftol_rel, double ftol_abs,
##       double xtol_rel, const double *xtol_abs,
##       double htol_rel, double htol_abs,
##       int maxeval, double maxtime) NLOPT_DEPRECATED;
##  void nlopt_get_local_search_algorithm(nlopt_algorithm *deriv,
##  					     nlopt_algorithm *nonderiv,
##  					     int *maxeval) NLOPT_DEPRECATED;
##  void nlopt_set_local_search_algorithm(nlopt_algorithm deriv,
##  					     nlopt_algorithm nonderiv,
##  					     int maxeval) NLOPT_DEPRECATED;
##  int nlopt_get_stochastic_population(void) NLOPT_DEPRECATED;
##  void nlopt_set_stochastic_population(int pop) NLOPT_DEPRECATED;
## *******************************************************************
